--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My First Website</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LM Solutions - Let Me Handle IT For You</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first website on GitHub Pages.</p>
+    <header>
+        <div class="logo">
+            <h1>LM Solutions</h1> 
+            <p>Let Me Handle IT For You</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li>
+                    <div class="search-box">
+                        <input type="text" placeholder="Search...">
+                        <button>🔍</button>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="latest-services">
+        <h2>LATEST SERVICES...</h2>
+        <div class="services-grid">
+            <div class="service-item">
+                <img src="service1.jpg" alt="Web Development"> <h3>Web Development</h3>
+                <p>Build and maintain your website with our expert web development services.</p>
+            </div>
+            <div class="service-item">
+                <img src="service2.jpg" alt="Data Analysis"> <h3>Data Analysis</h3>
+                <p>Gain valuable insights from your data with our analysis and visualization services.</p>
+            </div>
+            <div class="service-item">
+                <img src="service3.jpg" alt="Technical Support"> <h3>Technical Support</h3>
+                <p>Solve your technical problems quickly with our reliable support services.</p>
+            </div>
+            </div>
+    </section>
+
+    <section class="welcome-section">
+        <div class="welcome-content">
+            <h2>WELCOME! 👋</h2>
+            <img src="profile.jpg" alt="Your Profile Picture" class="profile-pic"> <p>I'm [Your Name] - an IT professional dedicated to helping you succeed. Let me handle your IT needs so you can focus on what matters most. I hope you enjoy exploring!</p>
+            <div class="social-icons">
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="pinterest.png" alt="Pinterest"></a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 LM Solutions. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
